--- a/forexglobal/sass/blocks/inner/tab.scss
+++ b/forexglobal/sass/blocks/inner/tab.scss
@@ -11,6 +11,7 @@
   color: #fff;
   font-size: 16px;
   font-weight: 300;
+  text-align: center;
   border: none;
   border-top-right-radius: 30px;
   background: $sc;
@@ -142,6 +143,11 @@
   }
 }
 
+.tab__anchor {
+  display: flex;
+  margin: 20px 0 0 0;
+}
+
 .tab__header {
   position: sticky;
   top: 0;
@@ -152,13 +158,13 @@
 
 .tab__content {
   display: none;
-  height: 700px;
+  // height: 700px;
   padding: 0 25px 25px 25px;
   border: 1px solid #6420ff;
   border-top-right-radius: 30px;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
-  overflow: scroll;
+  // overflow: scroll;
   
   h3 {
     margin: 0;
@@ -195,6 +201,20 @@
     height: 500px;
     overflow: scroll;
   }
+  
+  &--account {
+    padding: 0;
+    border: none;
+  }
+}
+
+.tab__inner {
+  height: 400px;
+  margin: 0 0 50px 0;
+  padding: 0 25px 25px 25px;
+  border: 1px solid #6420ff;
+  border-top-right-radius: 30px;
+  overflow: scroll;
 }
 
 .tab__table {
@@ -279,6 +299,13 @@
     
     th {
       top: 416px;
+    }
+  }
+  
+  &--sticky {
+    
+    th {
+      top: 116px;
     }
   }
 }
