--- a/forexglobal/sass/blocks/inner/tab.scss
+++ b/forexglobal/sass/blocks/inner/tab.scss
@@ -1,6 +1,10 @@
 .tab {
   display: flex;
   margin: 30px 0 0 0;
+  
+  &--account {
+    justify-content: center;
+  }
 }
 
 .tab__button {
@@ -145,6 +149,7 @@
 
 .tab__anchor {
   display: flex;
+  justify-content: center;
   margin: 20px 0 0 0;
 }
 
@@ -206,6 +211,11 @@
     padding: 0;
     border: none;
   }
+  
+  &--product {
+    height: 700px;
+    overflow: scroll;
+  }
 }
 
 .tab__inner {
@@ -250,7 +260,7 @@
     margin: 0;
   }
   
-  &--product {
+  &--right {
     
     th {
       
@@ -315,17 +325,21 @@
     font-size: 15px;
   }
   
-  .tab__name {
-    
-    th {
-      position: static;
-    }
-  }
+  // .tab__name {
+  // 
+  //   th {
+  //     position: static;
+  //   }
+  // }
 }
 
 @media screen and ($mobile-widths) {
   .tab {
     flex-direction: column;
+    
+    &--account {
+      margin: 30px 0;
+    }
   }
   
   .tab__button {
@@ -345,19 +359,28 @@
     }
   }
   
+  .tab__anchor {
+    display: none;
+  }
+  
   .tab__header {
-    position: static;
+    // position: static;
+    border-top-right-radius: 30px;
   }
+  // 
+  // .tab__name {
+  // 
+  //   th {
+  //     // position: static;
+  //   }
+  // }
   
-  .tab__name {
-    
-    th {
-      position: static;
-    }
-  }
-  
-  .tab__content {
+  .tab__content{
     border-top: none;
     border-radius: 3px;
+  }
+  
+  .tab__inner {
+    padding: 0;
   }
 }
