--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -3202,6 +3202,31 @@ body {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center; }
+  .client__flex--hide {
+    display: none;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .client__flex--column {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+    .client__flex--column label,
+    .client__flex--column select {
+      margin: 0 0 10px 0; }
+
+.client__checkbox:checked + .client__flex--hide {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important; }
+
+.client__select {
+  width: 310px !important; }
 
 .client__email {
   width: 500px;
