--- a/forexglobal/sass/blocks/inner/client.scss
+++ b/forexglobal/sass/blocks/inner/client.scss
@@ -117,6 +117,29 @@
   &--button {
     align-items: center;
   }
+  
+  &--hide {
+    display: none;
+    flex-direction: column;
+  }
+  
+  &--column {
+    flex-direction: column;
+    align-items: center;
+    
+    label,
+    select {
+      margin: 0 0 10px 0;
+    }
+  }
+}
+
+.client__checkbox:checked + .client__flex--hide {
+  display: flex !important;
+}
+
+.client__select {
+  width: 310px !important;
 }
 
 .client__email {
