--- a/investix/sass/blocks/button.scss
+++ b/investix/sass/blocks/button.scss
@@ -13,8 +13,12 @@
     width: 170px;
   }
   
+  &--medium {
+    width: 270px;
+  }
+  
   &--big {
-    
+    width: 370px;
   }
   
   &--transparent {
@@ -23,6 +27,14 @@
     color: $mc;
     font-weight: normal;
     border: 1px solid $mc;
+    background: transparent;
+  }
+  
+  &--white {
+    width: 268px;
+    padding: 9px 0;
+    font-weight: normal;
+    border: 1px solid #fff;
     background: transparent;
   }
 }
