--- a/investix/sass/blocks/services.scss
+++ b/investix/sass/blocks/services.scss
@@ -1,5 +1,6 @@
 .services {
-  background: url('../img/services-bg.jpg') no-repeat center;
+  padding: 0 0 100px 0;
+  background: url('../img/services-bg.jpg') no-repeat 0 80px;
   background-size: contain;
 }
 
