--- a/investix/sass/style.scss
+++ b/investix/sass/style.scss
@@ -9,3 +9,6 @@
 @import 'blocks/slider';
 @import 'blocks/info';
 @import 'blocks/services';
+@import 'blocks/live';
+@import 'blocks/contact';
+@import 'blocks/footer';
