--- a/investix/sass/blocks/footer.scss
+++ b/investix/sass/blocks/footer.scss
@@ -101,10 +101,11 @@
 }
 
 .footer__rules {
+  position: relative;
   display: flex;
   justify-content: space-between;
   width: 200px;
-  margin: 0;
+  margin: 0 100px 0 0;
   padding: 0;
   color: #ccc;
   list-style: none;
@@ -117,5 +118,19 @@
     &:hover {
       color: $mc;
     }
+  }
+}
+
+.footer__up {
+  position: absolute;
+  top: -10px;
+  right: -100px;
+  
+  button {
+    width: 40px;
+    height: 40px;
+    padding: 0;
+    border: none;
+    background: url('../img/footer-up.svg') no-repeat center;
   }
 }
