--- a/investix/css/style.css
+++ b/investix/css/style.css
@@ -499,4 +499,11 @@ body {
     height: 40px;
     padding: 0;
     border: none;
-    background: url("../img/footer-up.svg") no-repeat center; }
+    background: url("../img/footer-up.svg") no-repeat center;
+    -webkit-transition: 0.2s;
+    transition: 0.2s;
+    cursor: pointer;
+    outline: none; }
+    .footer__up button:hover {
+      -webkit-transform: scale(1.1);
+      transform: scale(1.1); }
