--- a/investix/css/style.css
+++ b/investix/css/style.css
@@ -127,18 +127,63 @@ body {
   margin: 0;
   padding: 0;
   list-style: none; }
+  .nav__list li {
+    position: relative; }
   .nav__list a {
+    position: relative;
+    padding: 25px 0;
     color: #000;
     font-weight: 600;
-    text-decoration: none; }
+    text-decoration: none;
+    -webkit-transition: 0.2s;
+    transition: 0.2s; }
+    .nav__list a:hover {
+      color: #ff451c; }
+    .nav__list a:after {
+      content: '';
+      position: absolute;
+      top: 36px;
+      right: -7px;
+      width: 5px;
+      height: 3px;
+      background: url("../img/nav-arrow.svg"); }
+
+.nav__sublist {
+  position: absolute;
+  top: 44px;
+  width: 140px;
+  margin: inherit;
+  padding: 20px 25px;
+  line-height: 30px;
+  list-style: inherit;
+  border-top: 1px solid #0060ff;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  background: #fff;
+  opacity: 0;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-transform: translateX(-15%);
+  transform: translateX(-15%);
+  clip: rect(0, 0, 0, 0);
+  z-index: 5; }
+  .nav__sublist a {
+    padding: 0;
+    color: #4c4c4c; }
+    .nav__sublist a:after {
+      background: none; }
+
+.nav__list > li:hover .nav__sublist {
+  clip: auto;
+  opacity: 1; }
 
 .slider {
-  height: 920px;
+  height: 700px;
   background: #309ce4 url("../img/slider-bg.jpg") no-repeat center;
   background-size: cover; }
 
 .slider__box {
-  height: 920px; }
+  height: 700px; }
 
 .slider__container {
   display: -webkit-box;
@@ -170,8 +215,8 @@ body {
   font-weight: normal; }
 
 .slider__img {
-  width: 355px;
-  height: 524px;
+  width: 300px;
+  height: 508px;
   background: url("../img/slider-1.png") no-repeat center;
   background-size: cover; }
 
