--- a/investix/sass/blocks/nav.scss
+++ b/investix/sass/blocks/nav.scss
@@ -9,9 +9,64 @@
   padding: 0;
   list-style: none;
   
+  li {
+    position: relative;
+  }
+  
   a {
+    position: relative;
+    padding: 25px 0;
     color: #000;
     font-weight: 600;
     text-decoration: none;
+    transition: 0.2s;
+    
+    &:hover {
+      color: $mc;
+    }
+    
+    &:after {
+      content: '';
+      position: absolute;
+      top: 36px;
+      right: -7px;
+      width: 5px;
+      height: 3px;
+      background: url('../img/nav-arrow.svg');
+    }
   }
+}
+
+.nav__sublist {
+  position: absolute;
+  top: 44px;
+  // left: -30px;
+  width: 140px;
+  margin: inherit;
+  padding: 20px 25px;
+  line-height: 30px;
+  list-style: inherit;
+  border-top: 1px solid #0060ff;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  background: #fff;
+  opacity: 0;
+  transition: 0.5s;
+  transform: translateX(-15%);
+  clip: rect(0, 0, 0, 0);
+  z-index: 5;
+  
+  a {
+    padding: 0;
+    color: #4c4c4c;
+    
+    &:after {
+      background: none;
+    }
+  }
+}
+
+.nav__list > li:hover .nav__sublist {
+  clip: auto;
+  opacity: 1;
 }
