--- a/investix/css/style.css
+++ b/investix/css/style.css
@@ -10,7 +10,12 @@ body {
 
 @media screen and (max-width: 1200px) {
   .container {
-    width: 100%; } }
+    width: 95%;
+    padding: 0; } }
+
+@media screen and (max-width: 768px) {
+  .container {
+    background: yellow; } }
 
 @font-face {
   font-family: 'SF UI Display';
@@ -84,6 +89,12 @@ body {
   width: 170px;
   height: 40px; }
 
+@media screen and (max-width: 1200px) {
+  .header__logo {
+    width: 130px; }
+  .header__button {
+    display: none !important; } }
+
 .button {
   display: block;
   padding: 10px 0;
@@ -113,6 +124,29 @@ body {
     font-weight: normal;
     border: 1px solid #fff;
     background: transparent; }
+
+@media screen and (max-width: 1200px) {
+  .button {
+    font-size: 14px; }
+    .button--small {
+      width: 130px; }
+    .button--medium {
+      width: 270px; }
+    .button--big {
+      width: 370px; }
+    .button--transparent {
+      width: 128px;
+      padding: 9px 0;
+      color: #ff451c;
+      font-weight: normal;
+      border: 1px solid #ff451c;
+      background: transparent; }
+    .button--white {
+      width: 268px;
+      padding: 9px 0;
+      font-weight: normal;
+      border: 1px solid #fff;
+      background: transparent; } }
 
 .nav {
   width: 670px; }
@@ -177,6 +211,10 @@ body {
   clip: auto;
   opacity: 1; }
 
+@media screen and (max-width: 1200px) {
+  .nav {
+    width: 550px; } }
+
 .slider {
   height: 700px;
   background: #309ce4 url("../img/slider-bg.jpg") no-repeat center;
@@ -220,6 +258,23 @@ body {
   background: url("../img/slider-1.png") no-repeat center;
   background-size: cover; }
 
+@media screen and (max-width: 1200px) {
+  .slider {
+    height: 600px; }
+  .slider__box {
+    height: 600px; }
+  .slider__container {
+    width: 96%; }
+  .slider__text {
+    width: 420px; }
+  .slider__title {
+    font-size: 40px; }
+  .slider__desc {
+    font-size: 20px; }
+  .slider__img {
+    width: 260px;
+    height: 458px; } }
+
 .info {
   padding: 120px 0; }
 
@@ -252,6 +307,17 @@ body {
   font-weight: 300; }
   .info__text:last-of-type {
     margin: 16px 0 30px 0; }
+
+@media screen and (max-width: 1200px) {
+  .info {
+    padding: 100px 0; }
+  .info__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .info__mockup {
+    margin: 0 0 50px 0; } }
 
 .services {
   padding: 0 0 100px 0;
@@ -302,6 +368,28 @@ body {
   .services__button:first-of-type {
     margin: 0 auto 20px auto; }
 
+@media screen and (max-width: 1200px) {
+  .services__title {
+    font-size: 50px; }
+  .services__subtitle {
+    font-size: 20px; }
+  .services__flex {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+  .services__box {
+    width: 170px;
+    padding: 270px 0 0 0; }
+    .services__box--intro {
+      background-size: 170px; }
+    .services__box--student {
+      background-size: 170px; }
+    .services__box--expert {
+      background-size: 170px; }
+    .services__box--pro {
+      background-size: 170px; }
+  .services__name {
+    font-size: 20px; } }
+
 .live {
   padding: 85px 0;
   background: #086cfc url("../img/live-bg.jpg") no-repeat center;
@@ -343,6 +431,19 @@ body {
   height: 272px;
   background: url("../img/live-mockup.png") no-repeat center;
   background-size: cover; }
+
+@media screen and (max-width: 1200px) {
+  .live__box {
+    width: 410px; }
+  .live__title {
+    font-size: 50px; }
+  .live__text {
+    font-size: 20px; }
+  .live__button:first-of-type {
+    margin: 0 0 10px 0; }
+  .live__mockup {
+    width: 300px;
+    height: 230px; } }
 
 .contact {
   padding: 100px 0; }
@@ -423,6 +524,27 @@ body {
   font-weight: normal;
   font-family: inherit;
   border: none; }
+
+@media screen and (max-width: 1200px) {
+  .contact__title {
+    font-size: 50px; }
+  .contact__subtitle {
+    margin: 20px 0 50px 0;
+    font-size: 20px; }
+  .contact__form {
+    width: 700px; }
+  .contact__input {
+    width: 300px; }
+    .contact__input--select {
+      width: 334px; }
+    .contact__input--code {
+      width: 36px; }
+    .contact__input--phone {
+      width: 200px; }
+  .contact__double {
+    width: 334px; }
+  .contact__submit {
+    width: 334px; } }
 
 .footer {
   padding: 30px 0 0 0;
