--- a/investix/sass/blocks/live.scss
+++ b/investix/sass/blocks/live.scss
@@ -42,3 +42,33 @@
   background: url('../img/live-mockup.png') no-repeat center;
   background-size: cover;
 }
+
+@media screen and ($tablet-widths) {
+  .live__box {
+    width: 410px;
+  }
+  
+  .live__title {
+    font-size: 50px;
+  }
+  
+  .live__text {
+    font-size: 20px;
+  }
+  
+  .live__button {
+    
+    &:first-of-type {
+      margin: 0 0 10px 0;
+    }
+  }
+  
+  .live__mockup {
+    width: 300px;
+    height: 230px;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  
+}
