--- a/investix/sass/blocks/slider.scss
+++ b/investix/sass/blocks/slider.scss
@@ -43,3 +43,40 @@
   background: url('../img/slider-1.png') no-repeat center;
   background-size: cover;
 }
+
+@media screen and ($tablet-widths) {
+  .slider {
+    // height: 920px;
+    height: 600px;
+  }
+
+  .slider__box {
+    // height: 920px;
+    height: 600px;
+  }
+  
+  .slider__container {
+    width: 96%;
+  }
+  
+  .slider__text {
+    width: 420px;
+  }
+  
+  .slider__title {
+    font-size: 40px;
+  }
+  
+  .slider__desc {
+    font-size: 20px;
+  }
+  
+  .slider__img {
+    width: 260px;
+    height: 458px;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  
+}
