--- a/investix/css/style.css
+++ b/investix/css/style.css
@@ -13,10 +13,6 @@ body {
     width: 95%;
     padding: 0; } }
 
-@media screen and (max-width: 768px) {
-  .container {
-    background: yellow; } }
-
 @font-face {
   font-family: 'SF UI Display';
   src: local("SF UI Display Thin"), local("SFUIDisplay-Thin"), url("../fonts/SFUIDisplay-Thin.woff2") format("woff2"), url("../fonts/SFUIDisplay-Thin.woff") format("woff");
@@ -89,11 +85,23 @@ body {
   width: 170px;
   height: 40px; }
 
+.header__toggle {
+  display: none; }
+
 @media screen and (max-width: 1200px) {
   .header__logo {
     width: 130px; }
   .header__button {
     display: none !important; } }
+
+@media screen and (max-width: 768px) {
+  .header__flex {
+    position: relative; }
+  .header__toggle {
+    position: absolute;
+    top: 0;
+    display: block;
+    background: red; } }
 
 .button {
   display: block;
@@ -130,23 +138,8 @@ body {
     font-size: 14px; }
     .button--small {
       width: 130px; }
-    .button--medium {
-      width: 270px; }
-    .button--big {
-      width: 370px; }
     .button--transparent {
-      width: 128px;
-      padding: 9px 0;
-      color: #ff451c;
-      font-weight: normal;
-      border: 1px solid #ff451c;
-      background: transparent; }
-    .button--white {
-      width: 268px;
-      padding: 9px 0;
-      font-weight: normal;
-      border: 1px solid #fff;
-      background: transparent; } }
+      width: 128px; } }
 
 .nav {
   width: 670px; }
@@ -215,6 +208,10 @@ body {
   .nav {
     width: 550px; } }
 
+@media screen and (max-width: 768px) {
+  .nav {
+    display: none; } }
+
 .slider {
   height: 700px;
   background: #309ce4 url("../img/slider-bg.jpg") no-repeat center;
@@ -264,7 +261,8 @@ body {
   .slider__box {
     height: 600px; }
   .slider__container {
-    width: 96%; }
+    width: 95%;
+    padding: 0; }
   .slider__text {
     width: 420px; }
   .slider__title {
@@ -274,6 +272,24 @@ body {
   .slider__img {
     width: 260px;
     height: 458px; } }
+
+@media screen and (max-width: 768px) {
+  .slider {
+    height: 400px; }
+  .slider__box {
+    height: 400px; }
+  .slider__text {
+    width: auto; }
+  .slider__title {
+    font-size: 30px;
+    text-align: center; }
+  .slider__desc {
+    font-size: 16px;
+    text-align: center; }
+  .slider__button {
+    margin: auto; }
+  .slider__img {
+    display: none; } }
 
 .info {
   padding: 120px 0; }
@@ -318,6 +334,21 @@ body {
     flex-direction: column; }
   .info__mockup {
     margin: 0 0 50px 0; } }
+
+@media screen and (max-width: 768px) {
+  .info {
+    padding: 50px 0; }
+  .info__mockup {
+    width: 300px;
+    height: 205px;
+    margin: 0 0 20px 0; }
+  .info__box {
+    width: auto; }
+  .info__title {
+    font-size: 27px;
+    text-align: center; }
+  .info__button {
+    margin: auto; } }
 
 .services {
   padding: 0 0 100px 0;
@@ -389,6 +420,32 @@ body {
       background-size: 170px; }
   .services__name {
     font-size: 20px; } }
+
+@media screen and (max-width: 768px) {
+  .services {
+    padding: 50px 0;
+    background: #d5f9fc; }
+  .services__title {
+    font-size: 30px;
+    text-align: center; }
+  .services__subtitle {
+    margin: 16px 0 50px 0;
+    font-size: 16px;
+    text-align: center; }
+  .services__flex {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap; }
+  .services__box {
+    margin: 0 0 50px 0; }
+    .services__box:last-child {
+      margin: 0; } }
 
 .live {
   padding: 85px 0;
@@ -545,6 +602,10 @@ body {
     width: 334px; }
   .contact__submit {
     width: 334px; } }
+
+@media screen and (max-width: 768px) {
+  .contact__form {
+    display: none; } }
 
 .footer {
   padding: 30px 0 0 0;
