--- a/investix/css/style.css
+++ b/investix/css/style.css
@@ -279,7 +279,8 @@ body {
   .slider__box {
     height: 400px; }
   .slider__text {
-    width: auto; }
+    width: auto;
+    margin: auto; }
   .slider__title {
     font-size: 30px;
     text-align: center; }
@@ -500,7 +501,38 @@ body {
     margin: 0 0 10px 0; }
   .live__mockup {
     width: 300px;
-    height: 230px; } }
+    height: 240px; } }
+
+@media screen and (max-width: 768px) {
+  .live {
+    padding: 50px 0; }
+  .live__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .live__box {
+    -webkit-box-ordinal-group: 3;
+    -ms-flex-order: 2;
+    order: 2;
+    width: auto; }
+  .live__title {
+    font-size: 30px;
+    text-align: center; }
+  .live__text {
+    margin: 16px 0 50px 0;
+    font-size: 16px;
+    text-align: center; }
+  .live__button {
+    display: block;
+    margin: auto; }
+    .live__button:first-of-type {
+      margin: 0 auto 10px auto; }
+  .live__mockup {
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1;
+    margin: 0 0 20px 0; } }
 
 .contact {
   padding: 100px 0; }
@@ -604,8 +636,39 @@ body {
     width: 334px; } }
 
 @media screen and (max-width: 768px) {
+  .contact {
+    padding: 50px 0; }
+  .contact__title {
+    font-size: 30px;
+    text-align: center; }
+  .contact__subtitle {
+    margin: 16px 0 50px 0;
+    font-size: 16px;
+    text-align: center; }
   .contact__form {
-    display: none; } }
+    width: 300px;
+    margin: auto; }
+  .contact__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    margin: 0; }
+  .contact__double {
+    width: 300px; }
+  .contact__input {
+    width: 266px;
+    margin: 0 0 10px 0; }
+    .contact__input--select {
+      width: 300px;
+      height: 40px; }
+    .contact__input--code {
+      width: 36px; }
+    .contact__input--phone {
+      width: 185px; }
+  .contact__submit {
+    width: 300px;
+    margin: 10px 0 0 0; } }
 
 .footer {
   padding: 30px 0 0 0;
@@ -735,3 +798,55 @@ body {
     .footer__up button:hover {
       -webkit-transform: scale(1.1);
       transform: scale(1.1); }
+
+@media screen and (max-width: 768px) {
+  .footer__logo {
+    display: block;
+    margin: auto; }
+  .footer__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .footer__list {
+    width: 200px;
+    margin: 35px auto 0 auto;
+    text-align: center; }
+    .footer__list:last-child {
+      margin: 35px auto; }
+  .footer__phone,
+  .footer__home,
+  .footer__email {
+    padding: 0 0 15px 0; }
+  .footer__text {
+    text-align: center; }
+  .footer__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .footer__copy {
+    -webkit-box-ordinal-group: 3;
+    -ms-flex-order: 2;
+    order: 2;
+    margin: 30px 0 0 0;
+    padding: 0 0 70px 0; }
+  .footer__rules {
+    margin: 0; }
+  .footer__up {
+    top: 90px;
+    right: 50%;
+    -webkit-animation: up 1s infinite alternate;
+    animation: up 1s infinite alternate;
+    -webkit-transform: translateX(50%);
+    transform: translateX(50%); }
+  @-webkit-keyframes up {
+    0% {
+      top: 100px; }
+    100% {
+      top: 80px; } }
+  @keyframes up {
+    0% {
+      top: 100px; }
+    100% {
+      top: 80px; } } }
