--- a/investix/sass/blocks/live.scss
+++ b/investix/sass/blocks/live.scss
@@ -65,10 +65,46 @@
   
   .live__mockup {
     width: 300px;
-    height: 230px;
+    height: 240px;
   }
 }
 
 @media screen and ($mobile-widths) {
+  .live {
+    padding: 50px 0;
+  }
   
+  .live__flex {
+    flex-direction: column;
+  }
+  
+  .live__box {
+    order: 2;
+    width: auto;
+  }
+  
+  .live__title {
+    font-size: 30px;
+    text-align: center;
+  }
+  
+  .live__text {
+    margin: 16px 0 50px 0;
+    font-size: 16px;
+    text-align: center;
+  }
+  
+  .live__button {
+    display: block;
+    margin: auto;
+    
+    &:first-of-type {
+      margin: 0 auto 10px auto;
+    }
+  }
+  
+  .live__mockup {
+    order: 1;
+    margin: 0 0 20px 0;
+  }
 }
