--- a/investix/js/slick/slick-theme.css
+++ b/investix/js/slick/slick-theme.css
@@ -202,3 +202,12 @@
     opacity: .75;
     color: white;
 }
+
+@media screen and (max-width: 1200px) {}
+
+@media screen and (max-width: 768px) {
+  .slick-dots
+  {
+      bottom: 20px;
+  }
+}
