--- a/investix/sass/blocks/nav.scss
+++ b/investix/sass/blocks/nav.scss
@@ -79,6 +79,48 @@
 
 @media screen and ($mobile-widths) {
   .nav {
-    display: none;
+    position: absolute;
+    top: 55px;
+    width: 100%;
+    border-top: 1px solid #0060ff;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    background: #fff;
+    clip: rect(0, 0, 0, 0);
+    opacity: 0;
+    transition: 1s;
+    z-index: 5;
+    
+    &--active {
+      clip: auto;
+      opacity: 1;
+    }
+  }
+  
+  .nav__list {
+    flex-direction: column;
+    text-align: center;
+    
+    a {
+      display: inline-block;
+      padding: 10px 0;
+      
+      &:after {
+        top: 22px;
+        right: -7px;
+      }
+    }
+  }
+  
+  .nav__sublist {
+    top: 40px;
+    left: 0;
+    width: 100%;
+    padding: 20px 0;
+    transform: translateX(0%);
+    
+    a {
+      padding: 0;
+    }
   }
 }
